err/googleplayapi.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/googleplayapi'...
Compiling './lib/python3.5/site-packages/googleplayapi/categories.py'...
***   File "./lib/python3.5/site-packages/googleplayapi/categories.py", line 18
    print SEPARATOR.join(["ID", "Name"])
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/googleplayapi/googleplay.py'...
***   File "./lib/python3.5/site-packages/googleplayapi/googleplay.py", line 98
    print "authSubToken: " + authSubToken
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/googleplayapi/helpers.py'...
***   File "./lib/python3.5/site-packages/googleplayapi/helpers.py", line 21
    print SEPARATOR.join(l)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/googleplayapi/list.py'...
***   File "./lib/python3.5/site-packages/googleplayapi/list.py", line 14
    print "Usage: %s category [subcategory] [nb_results] [offset]" % sys.argv[0]
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/googleplayapi/permissions.py'...
***   File "./lib/python3.5/site-packages/googleplayapi/permissions.py", line 15
    print "Usage: %s packagename1 [packagename2 [...]]" % sys.argv[0]
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/googleplayapi/search.py'...
***   File "./lib/python3.5/site-packages/googleplayapi/search.py", line 14
    print "Usage: %s request [nb_results] [offset]" % sys.argv[0]
                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/googleplayapi-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
